test: add/fix tests across all 4 services to pass SonarQube quality gates
- course-service: add controller and service unit tests (InstructorAnalytics, LearningPath, Review)
- enrollment-service: fix S5838/S5853 assertion style in service and controller tests
- quiz-service: fix S1192/S112 in QuizServiceImpl/GazeController/QuizController; fix S5778/S5838 in tests
- lesson-service: refactor LessonFileController (S3776/S6204/S108/S1168); fix S112 in services; add LessonFileControllerTest
All 4 SonarQube quality gates now pass (new_violations=0, new_coverage>=50%)